tests/fixtures/invalid/pow_int_dict_float.py
# Cannot call pow() with Int, Dict[str, int], Float
x = pow(1, {"a": 1}, 1.0)
